# grdk

./: CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml
docs/: architecture.md  image-canvas.md  polarimetric-workflows.md  polygon-drawing.md
grdk/: __init__.py  __main__.py  _launcher.py  _pyqt6_bootstrap.py
grdk/catalog/: __init__.py  database.py  models.py  pool.py  resolver.py  updater.py
grdk/core/: __init__.py  chip.py  config.py  discovery.py  dsl.py  executor.py  gpu.py  project.py  tags.py  workflow.py
grdk/viewers/: __init__.py  band_info.py  chip_gallery.py  coordinate_bar.py  dual_viewer.py  geo_viewer.py  geojson_export.py  geojson_import.py  image_canvas.py  main_window.py  polygon_drawing.py  polygon_tools.py  stack_viewer.py  tile_cache.py  tiled_canvas.py  vector_overlay.py
grdk/widgets/: __init__.py  _display_controls.py  _param_controls.py  _pol_utils.py  _signals.py  colorbar.py
grdk/widgets/admin/: __init__.py  ow_artifact_editor.py  ow_catalog_browser.py  ow_update_monitor.py  ow_workflow_manager.py
grdk/widgets/geodev/: __init__.py  ow_chip_loader.py  ow_chipper.py  ow_coregister.py  ow_covariance_matrix.py  ow_image_loader.py  ow_labeler.py  ow_metadata_inspector.py  ow_orchestrator.py  ow_pauli_decomposer.py  ow_preview.py  ow_processor.py  ow_project.py  ow_publisher.py  ow_stack_viewer.py
tests/: test_band_info.py  test_catalog_database.py  test_catalog_pool.py  test_catalog_resolver.py  test_catalog_updater.py  test_convenience.py  test_core_chip.py  test_core_config.py  test_core_dsl.py  test_core_executor.py  test_core_gpu.py  test_core_project.py  test_core_tags.py  test_core_workflow.py  test_dual_viewer.py  test_geo_viewer.py  test_grdl_integration.py  test_headless.py  test_image_canvas.py  test_pol_utils.py
tests/test_widgets/: __init__.py  conftest.py  test_param_controls.py  test_polarimetric.py  test_widget_imports.py
