[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grdk"
version = "0.1.0"
description = "GEOINT Rapid Development Kit — GUI tooling for CUDA-optimized image processing workflow orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Claude Code (Anthropic)"},
]
maintainers = [
    {name = "Steven Siebert"},
]
keywords = ["geoint", "image-processing", "workflow", "cuda", "orange3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pyyaml>=6.0",
    "requests>=2.25",
    "packaging>=21.0",
]

[project.optional-dependencies]
gui = [
    "orange3>=3.36",
    "orange-widget-base",
    "napari[pyqt5]>=0.4",
]
gpu = [
    "cupy-cuda12x>=13.0",
    "torch>=2.0",
]
dev = [
    "pytest",
    "black",
    "mypy",
]

[project.entry-points."orange.widgets"]
"GEODEV" = "grdk.widgets.geodev"
"GRDK Admin" = "grdk.widgets.admin"

[tool.setuptools.packages.find]
include = ["grdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
